fix overflow

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -500,6 +500,7 @@
   margin: 55px -10px 0
   font-size: 0
   position: relative
+  overflow: hidden
   +r(600)
     margin-top: 24px 
 .form__field
